--- a/nginx/sites-available/example.com.br.conf
+++ b/nginx/sites-available/example.com.br.conf
@@ -2,7 +2,7 @@ limit_req_zone $binary_remote_addr zone=front_limit:10m rate=30r/s;
 
 server {
     listen 80;
-    server_name admin.juansalles.com.br;
+    server_name example.com.br;
 
     location / {
         limit_req zone=front_limit burst=50;
@@ -19,7 +19,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name admin.juansalles.com.br;
+    server_name example.com.br;
 
     ssl_certificate /etc/certificados/fullchain.pem;
     ssl_certificate_key /etc/certificados/privkey.pem;
